--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
   },
   "homepage": "https://github.com/nicholashamilton/express-jwt-boiler#readme",
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
+    "@types/joi": "^14.3.4",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.7.0",
     "@types/node": "^13.7.0",
+    "install": "^0.13.0",
     "nodemon": "^2.0.2",
+    "npm": "^6.13.7",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.1",
     "ts-node": "^8.6.2",
@@ -41,11 +46,14 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.11"
   }
 }
