--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-jwt-boiler",
+  "name": "express-jwt-prototype",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
